--- a/style.css
+++ b/style.css
@@ -1,184 +1,237 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #f4f4f4;
-  }
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+.container{
+  display: flex;
+  justify-content: space-between;
   
-.Header-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    
 
 }
-.Header-container h1{
-    padding: 20px;
+.logo img{
+  padding: 20px 0 0 150px;
+  position: fixed;
 }
-
-.image{
-    position: absolute;
-    width: 100%;
-    top: -40px;
-    z-index: -1;
-
-}
-.main-container{
-    display: flex;
-    justify-content: space-between;
-
-
+.image img{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: -1;
 }
 .phone{
-background-color: orangered;
-border-radius: 5px;
-border: none;
+ position: fixed;
+ bottom: 0;
+ left: 0;
+  width: 250px;
+  height:80px ;
+  background-color: rgb(156, 10, 10);
+  border-radius: 10px;
+  border-bottom: 5px solid white;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.phone h3,p {
+  color: white;
+}
+.phone p{
+  font-size: 32px;
+  font-weight: bolder;
+}
+.right-section{
+  width: 50%;
+  
 
-width: 200px;
-height: 50px;
 }
-.phone h3{
-    text-align: center;
-    color: white;
-    
+.left-section{
+  width: 50%;
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+}
+.form-container{
+  background-color: rgb(233, 226, 226);
+  margin: 20px 0;
+  
+  border-radius: 5px;
+  box-shadow: 2px 2px 10px 5px rgb(0 0 0 / 20%);
+  width:400px;
+  height: 300px;
+}
+h1,h2{
+  margin: 0;
+  padding: 0;
+  color: rgb(156, 10, 10);
+  text-transform: uppercase;
+  font-weight: bolder;
+}
+.form-container h2{
+  text-align: center;
+  padding: 20px ;
+}
+.form-container input{
+  width: calc(100% - 20px);
+  padding: 10px;
+  margin: 10px ;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: rgb(156, 10, 10);
+}
+::placeholder{
+  color: white;
+  font-size: 12px;
+}
+.form-container button {
+  background-color:rgb(156, 10, 10);
+  color: white;
+  padding: 10px 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 100%;
+  font-size: 28px;
+  font-weight: bold;
+}
+.features li{
+  font-weight:500;
+  letter-spacing: 0.5px;
+  font-size: 20px;
+}
+.features{
+  padding: 10px 0  20px 20px;
+  line-height: 1.5rem;
 
 }
+.seprator{
+  border: none;
+  border-top: 3px dotted black;
   
-h1, h2, h3 {
-    color: #222;
-    text-align: center;
-    margin-bottom: 20px;
-    margin: 0;
-    padding: 0;
+  height: 1px;
+  width: 50%;
 }
-  
-.logo {
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
-    margin: 20px;
+.last-section{
+  padding: 10px 0 10px 20px;
+}
+.second{
+  padding-top: 10px;
+}
+.last-se h2{
+  font-size: 20px;
+  padding: 20px 0 20px 40px;
+}
+.last-se span{
+  border-right: 3px solid grey;
+  margin: 10px;
 }
 
-  
-.form-container {
-    background-color: #f4f4f4;
-    padding: 20px;
-    border-radius: 5px;
-    margin-bottom: 20px;
-    margin-right: 20px;
-    opacity:90%;
-    
+.last-se h3{
+  text-transform: uppercase;
+  font-weight: bold;
+  padding-left: 10px;
 }
+
+.about p{
+  margin: auto;
+  text-align: center;
+  background-color:rgb(156, 10, 10);
+  width: 60%;
+  border: none;
+  border-radius: 10px;
+  padding:10px 0 ;
   
-.form-group {
-    margin-bottom: 15px;
 }
+.about button{
+  margin-inline: 40% ;
+  text-align: center;
+  width: 100px;
+  background-color:rgb(156, 10, 10); 
+  border: none;
+  border-radius: 5px;
+  height: 30px;
+  color: white;
   
-.form-control {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    box-sizing: border-box;
-}
   
-.btn {
-    background-color: #ed071e;
-    color: #fff;
-    padding: 12px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    width: 100%;
-    font-size: 16px;
 }
-  
-.btn:hover {
-    opacity: 0.8;
-}
-  
-.features {
-    display: flex;
-    justify-content: flex-end;
-    margin: 20px 20px;
-}
-  
-.features li {
-    list-style: none;
-    margin-bottom: 10px
-    
-}
-  
-.features li::before {
-    content: "\f00c";
-    font-family: FontAwesome;
-    color: #f6f6f6;
-    display: inline-block;
-    margin-right: 10px;
-}
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media (max-width: 672px) {
-    .main-container {
-      flex-direction: column;
-    }
-    .image{
-        width: 100%;
-        height: 100%;
-    }
-    .phone {
+  .container {
+    flex-direction: column;
+  }
+  .image{
       width: 100%;
-      height: 100px;
-    }
-    .form-container {
-      margin-right: 0;
-    }
-    .features {
-      flex-direction: column;
-      align-items: center;
-    }
-    .features li {
-      margin-bottom: 20px;
-    }
+      height: 100%;
+  }
+  .phone {
+    width: 100%;
+    height: 100px;
+  }
+  .form-container {
+    margin-right: 0;
+  }
+  .features {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .logo img{
+    position: static;
+  }
 }
 @media (max-width: 480px) {
-    .Header-container {
-      flex-direction: column;
-    }
-    .Header-container h1 {
-      font-size: 24px;
-    }
-    .image{
-        width: 100%;
-        height: 100%;
-    }
-    .logo {
-      margin-bottom: 10px;
-    }
-    .form-control {
-      padding: 8px;
-    }
-    .btn {
-      padding: 10px 15px;
-    }
+h1,h2,li{
+  width: 100%;
 }
-  
+  .image{
+      width: 100%;
+      height: 100%;
+  }
+  .logo {
+    margin-bottom: 10px;
+  }
+  .form-control {
+    padding: 8px;
+  }
+  .btn {
+    padding: 10px 15px;
+  }
+  .logo img{
+    position: static;
+  }
+}
+
 
 @media (max-width: 320px) {
-    .Header-container h1 {
-      font-size: 18px;
-    }
-    .image{
-        width: 100%;
-            
-    }
+ 
+ .phone{
+  width: 10%;
+ }
+  .image{
+      width: 100%;
+          
+  }
+  .logo img{
+    position: static;
+  }
 
-    .form-control {
-      padding: 6px;
-    }
-    .btn {
-      padding: 8px 12px;
-    }
+  .form-control {
+    padding: 6px;
+  }
+  .btn {
+    padding: 8px 12px;
+  }
   }
